--- a/foodie-dev-api/src/main/resources/application.yml
+++ b/foodie-dev-api/src/main/resources/application.yml
@@ -4,7 +4,7 @@
 #
 ###########################################################
 server:
-  port: 8088
+#  port: 8088
   tomcat:
     uri-encoding: utf-8
   max-http-header-size: 80KB
@@ -15,12 +15,14 @@ server:
 #
 ###########################################################
 spring:
+  profiles:
+    active: prod    # 定义的不会更改的环境
   datasource:                                             # 数据源相关配置
     type: com.zaxxer.hikari.HikariDataSource              # 数据源类型：HikariCP
     driver-class-name: com.mysql.jdbc.Driver              # mysql驱动
-    url: jdbc:mysql://localhost:3306/foodie-shop?characterEncoding=UTF-8&useSSL=false&useUnicode=true&serverTimezone=UTC&autoReconnect=true
-    username: root
-    password: 123456
+#    url: jdbc:mysql://localhost:3306/foodie-shop?characterEncoding=UTF-8&useSSL=false&useUnicode=true&serverTimezone=UTC&autoReconnect=true
+#    username: root
+#    password: 123456
     hikari:
       connection-timeout: 30000          # 等待连接池分配连接的最大时长（毫秒），超过时长还没有可用连接则发生SQLException，默认30秒
       minimum-idle: 5                    # 最小连接数
@@ -42,8 +44,8 @@ spring:
 mybatis:
   type-aliases-package: com.imooc.pojo          # 所有POJO类所在包路径 实体类映射
   mapper-locations: classpath:mapper/*.xml      # mapper映射文件
-  configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl   # 在控制台输出SQL语句(开发环境使用)
+#  configuration:
+#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl   # 在控制台输出SQL语句(开发环境使用)
 
 
 ###########################################################
