--- a/foodie-dev-api/src/main/resources/application.yml
+++ b/foodie-dev-api/src/main/resources/application.yml
@@ -16,7 +16,7 @@ server:
 ###########################################################
 spring:
   profiles:
-    active: prod    # 定义的不会更改的环境
+    active: dev    # 定义的不会更改的环境
   datasource:                                             # 数据源相关配置
     type: com.zaxxer.hikari.HikariDataSource              # 数据源类型：HikariCP
     driver-class-name: com.mysql.jdbc.Driver              # mysql驱动
